v0.18.0/_sources/content/examples/10-pgi/index.rst.txt


.. _sphx_glr_content_examples_10-pgi:

PGI: Petrophysically and Geologically guided Inversion
======================================================



.. raw:: html

    <div class="sphx-glr-thumbnails">


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="We do a comparison between the classic least-squares inversion and our formulation of a petroph...">

.. only:: html

  .. image:: /content/examples/10-pgi/images/thumb/sphx_glr_plot_inv_0_PGI_Linear_1D_thumb.png
    :alt: Petrophysically guided inversion (PGI): Linear example

  :ref:`sphx_glr_content_examples_10-pgi_plot_inv_0_PGI_Linear_1D.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Petrophysically guided inversion (PGI): Linear example</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="We do a comparison between the classic least-squares inversion and our formulation of a petroph...">

.. only:: html

  .. image:: /content/examples/10-pgi/images/thumb/sphx_glr_plot_inv_1_PGI_Linear_1D_joint_WithRelationships_thumb.png
    :alt: Petrophysically guided inversion: Joint linear example with nonlinear relationships

  :ref:`sphx_glr_content_examples_10-pgi_plot_inv_1_PGI_Linear_1D_joint_WithRelationships.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Petrophysically guided inversion: Joint linear example with nonlinear relationships</div>
    </div>


.. raw:: html

    </div>


.. toctree::
   :hidden:

   /content/examples/10-pgi/plot_inv_0_PGI_Linear_1D
   /content/examples/10-pgi/plot_inv_1_PGI_Linear_1D_joint_WithRelationships

