v0.23.0/_sources/content/examples/10-pgi/index.rst.txt


.. _sphx_glr_content_examples_10-pgi:

PGI: Petrophysically and Geologically guided Inversion
======================================================



.. raw:: html

    <div class="sphx-glr-thumbnails">

.. thumbnail-parent-div-open

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="We do a comparison between the classic least-squares inversion and our formulation of a petrophysically constrained inversion. We explore it through the UBC linear example.">

.. only:: html

  .. image:: /content/examples/10-pgi/images/thumb/sphx_glr_plot_inv_0_PGI_Linear_1D_thumb.png
    :alt:

  :ref:`sphx_glr_content_examples_10-pgi_plot_inv_0_PGI_Linear_1D.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Petrophysically guided inversion (PGI): Linear example</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="We do a comparison between the classic least-squares inversion and our formulation of a petrophysically guided inversion. We explore it through coupling two linear problems whose respective physical properties are linked by polynomial relationships that change between rock units.">

.. only:: html

  .. image:: /content/examples/10-pgi/images/thumb/sphx_glr_plot_inv_1_PGI_Linear_1D_joint_WithRelationships_thumb.png
    :alt:

  :ref:`sphx_glr_content_examples_10-pgi_plot_inv_1_PGI_Linear_1D_joint_WithRelationships.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Petrophysically guided inversion: Joint linear example with nonlinear relationships</div>
    </div>


.. thumbnail-parent-div-close

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /content/examples/10-pgi/plot_inv_0_PGI_Linear_1D
   /content/examples/10-pgi/plot_inv_1_PGI_Linear_1D_joint_WithRelationships

